# binary-msan

./: .gitignore  CMakeLists.txt  NOTICE  README.md  SConscript  SConstruct  binary-msan.sh  debug.sh  init.sh  run.sh  set_env_vars
evaluation/: CMakeLists.txt  InstrCounter.cpp  InstrCounter.h  Main.cpp  README.md  binary_preparations.py  counter.sh  evaluation.py  instruction_counting.py  performance_measurement.py  preparations.py  time_measurement.py
evaluation/Docker/: Dockerfile  static-coreutils.sh
evaluation/binutils/Docker/: Dockerfile  binutils.sh
evaluation/binutils/binaries/: elfedit  gentestdlls  readelf  sysinfo
evaluation/coreutils/Docker/: Dockerfile
evaluation/coreutils/binaries/: [  b2sum  (+105 more)
evaluation/results/: compile_sanitize_times.csv  covered_binaries_with_given_instructions.csv  file_size.csv  instructions_per_binary.csv  instructions_sorted_by_appearance.csv  run_time_performances.csv
instrumentation/: BasicInstructionHandler.cpp  BasicInstructionHandler.h  BinaryArithmeticHandler.cpp  BinaryArithmeticHandler.h  BinaryLogicHandler.cpp  BinaryLogicHandler.h  CMakeLists.txt  CapstoneService.cpp  CapstoneService.h  CompareHandler.cpp  CompareHandler.h  ControlFlowHandler.cpp  ControlFlowHandler.h  DisassemblyService.cpp  DisassemblyService.h  EflagsHandler.cpp  EflagsHandler.h  FunctionAnalysis.cpp  FunctionAnalysis.h  FunctionHandler.h  Handler.h  InstructionHandler.h  JumpHandler.cpp  JumpHandler.h  LeaHandler.cpp  LeaHandler.h  MSan.cpp  MSan.h  Main.cpp  MemoryAccessHandler.cpp  MemoryAccessHandler.h  MemoryAccessInstrumentation.cpp  MemoryAccessInstrumentation.h  MovHandler.cpp  MovHandler.h  RuntimeLib.h  StackVariableHandler.cpp  StackVariableHandler.h  TestHandler.cpp  TestHandler.h  (+8 more)
libmsan/interception/: CMakeLists.txt
libmsan/msan/: CMakeLists.txt  msan.cpp
libmsan/ubsan/: CMakeLists.txt
runtimeLibrary/: CMakeLists.txt  Interface.cpp  Interface.h  interface.cpp  interface.h
src/: CMakeLists.txt  CapstoneService.cpp  CapstoneService.h  SConscript  eflags_access.cpp  eflags_access.hpp  interface.cpp  interface.h  jumps.cpp  jumps.hpp  main.cpp  msan.cpp  msan.hpp  msan_driver.cpp  utils.cpp  utils.h
src/instrumentation/: BinaryArithmeticHandler.cpp  BinaryArithmeticHandler.h  BinaryLogicHandler.cpp  BinaryLogicHandler.h  CMakeLists.txt  ControlFlowHandler.cpp  ControlFlowHandler.h  DisassemblyService.cpp  EflagsHandler.cpp  FunctionAnalysis.cpp  FunctionAnalysis.h  InstructionHandler.h  LeaHandler.cpp  LeaHandler.h  MSan.cpp  MSan.h  Main.cpp  MemoryAccessHandler.cpp  MemoryAccessHandler.h  MovHandler.cpp  MovHandler.h  RflagsHandler.cpp  RflagsHandler.h  RuntimeLib.h  StackVariableHandler.cpp  StackVariableHandler.h  Utils.cpp  Utils.h
src/runtimeLibrary/: BinMsanApi.cpp  BinMsanApi.h  CMakeLists.txt
test/: CMakeLists.txt  README.md  checkRegIsInitTests.cpp  clean.sh  getRegisterShadowTests.cpp  immToMem_16bit.cpp  immToMem_8bit.cpp  isMemFullyDefined.cpp  isRegFullyDefined.cpp  isRegOrMemFullyDefined.cpp  isRegOrRegFullyDefined.cpp  memToReg_16bit.cpp  memToReg_16bit_heap.cpp  memToReg_32bit.cpp  memToReg_32bit_heap.cpp  memToReg_64bit.cpp  memToReg_64bit_heap.cpp  memToReg_8bit.cpp  memToReg_8bitHigh.cpp  memToReg_8bitHigh_heap.cpp  memToReg_8bit_heap.cpp  regToMem_16bit.cpp  regToMem_32bit.cpp  regToMem_64bit.cpp  regToMem_8bit.cpp  regToMem_8bitHigh.cpp  regToRegShadowCopyTests.cpp  regToReg_32bit.cpp  regToReg_64bit.cpp  run-test.py  run-tests.py  setMemShadowTests.cpp  setRegShadowTests.cpp  stack_leaf.cpp  stack_leaf_values_not_overwritten.cpp  stack_redzone_and_rspSub.cpp  stack_regular.cpp  stack_tailcall.cpp  test.sh  trap_conditional_branch.cpp  (+2 more)
test/BasicInstructionHandlerTests/: memReg.cpp  regImm.cpp  regReg.cpp
test/BinaryArithmeticHandlerTests/: memImm.cpp  memReg.cpp  regImm.cpp  regMem.cpp  regReg.cpp
test/BinaryLogicHandlerTests/: memImm.cpp  memReg.cpp  regImm.cpp  regMem.cpp  regReg.cpp  xorRegReg.cpp
test/ChainingTests/: basic_propagation.cpp  class.cpp  conjunction_propagation.cpp  excl_disjunction_propagation.cpp  subtraction_propagation.cpp
test/ControlFlowHandlerTests/: poisonedTarget_mem.cpp  poisonedTarget_reg.cpp  unpoisonedTarget_mem.cpp  unpoisonedTarget_reg.cpp
test/IntegrationTests/: basic_propagation.cpp
test/LeaHandlerTests/: lea16_poisoned.cpp  lea16_unpoisoned.cpp  lea32_poisoned.cpp  lea32_unpoisoned.cpp  lea64_poisoned.cpp  lea64_unpoisoned.cpp
test/MovHandlerTests/: immToMem_32bit.cpp  immToMem_64bit.cpp  immToMem_8bit.cpp  immToReg_16bit.cpp  immToReg_32bit.cpp  immToReg_64bit.cpp  immToReg_8bit.cpp  immToReg_8bitHigh.cpp  memToReg_16bit.cpp  memToReg_32bit.cpp  memToReg_64bit.cpp  memToReg_8bit.cpp  memToReg_8bitHigh.cpp  regToMem_16bit.cpp  regToMem_32bit.cpp  regToMem_64bit.cpp  regToMem_8bit.cpp  regToMem_8bitHigh.cpp  regToReg_16bit.cpp  regToReg_32bit.cpp  regToReg_64bit.cpp  regToReg_8bit.cpp  regToReg_8bitHigh.cpp  regToReg_8bitHighMixed1.cpp  regToReg_8bitHighMixed2.cpp
test/PropagationTests/: addition_propagation.cpp  disjunction_propagation.cpp
test/SinkTests/: conditional_branch.cpp  conditional_branch_unpoisoned.cpp  function_pointer.cpp  function_pointer_unpoisoned.cpp  libc.cpp  libc_unpoisoned.cpp  pointer_deref.cpp  pointer_deref_unpoisoned.cpp  syscall.cpp  syscall_unpoisoned.cpp
test/SourceTests/: heap_poisoned.cpp  heap_unpoisoned.cpp  stack_poisoned.cpp  stack_unpoisoned.cpp
test/StackVariableHandlerTests/: stack_leaf.cpp  stack_leaf_values_not_overwritten.cpp  stack_regular.cpp  stack_tailcall.cpp
test/TrapTests/: trap_conditional_branch.cpp  trap_pointer_deref.cpp  trap_syscall.cpp
test/unit_tests/: CMakeLists.txt  checkRegIsInitTests.cpp  getRegisterShadowTests.cpp  initUpper4BytesTests.cpp  isMemFullyDefined.cpp  isRegFullyDefined.cpp  isRegOrMemFullyDefined.cpp  isRegOrRegFullyDefined.cpp  memToRegShadowCopyTests.cpp  propagateMemOrRegShadow.cpp  propagateRegOrMemShadow.cpp  propagateRegOrRegShadow.cpp  regToMemShadowCopyTests.cpp  regToRegShadowCopyTests.cpp  setMemShadowTests.cpp  setRegShadowTests.cpp  unpoisonUpper4BytesTests.cpp
(+34 files in other folders)
